--- a/2020-1/tareas/tarea_09_soluciones.tex
+++ b/2020-1/tareas/tarea_09_soluciones.tex
@@ -79,28 +79,28 @@
 \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 
 \newtheorem{teorema}{Teorema}[section]
-\newtheorem{proposicion}[teorema]{Proposición}
+\newtheorem{proposicion}[teorema]{Proposici\'on}
 \newtheorem{corolario}[teorema]{Corolario}
 \newtheorem{lema}[teorema]{Lema}
 \newtheorem{propiedad}[teorema]{Propiedad}
 
 \theoremstyle{definition}
 
-\newtheorem{definicion}{Definición}[section]
+\newtheorem{definicion}{Definici\'on}[section]
 \newtheorem{ejemplo}{Ejemplo}[section]
 \newtheorem{problema}{Problema}[section]
 \newtheorem{ejercicio}{Ejercicio}[section]
 \newtheorem{ejerciciof}{}[section]
 
 \theoremstyle{remark}
-\newtheorem{observacion}{Observación}[section]
+\newtheorem{observacion}{Observaci\'on}[section]
 \newtheorem{nota}{Nota}[section]
 
 \renewcommand{\partname }{Parte }
 \renewcommand{\indexname}{Indice }
 \renewcommand{\figurename }{Figura }
 \renewcommand{\tablename }{Tabla }
-\renewcommand{\proofname}{Demostración}
+\renewcommand{\proofname}{Demostraci\'on}
 \renewcommand{\appendixname }{}
 \renewcommand{\contentsname }{Contenidos }
 \renewcommand{\chaptername }{}
@@ -110,7 +110,7 @@
 
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -145,17 +145,17 @@
 	\begin{enumerate}
 		\item[1.] (60 pts) 
 		\begin{enumerate}
-			\item[(i)] Encontrar todas las soluciones de la ecuación en congruencia
-			$$30\,x\equiv 2 \quad (67)$$
+			\item[(i)] Encontrar todas las soluciones de la ecuaci\'on en congruencia
+			$$10\,x\equiv 8 \quad (59)$$
 			usando el método visto en clase.
-			\item[(ii)] Dar todas las soluciones $x$ de la ecuación anterior tales que $0 < x < 300$.
+			\item[(ii)] Dar todas las soluciones $x$ de la ecuaci\'on anterior tales que $0 < x < 150$.
 		\end{enumerate}
-		\vskip .2cm
-		\item[2.]  (40 pts)  Encontrar los últimos dos dígitos de $2^{338}$. (\textit{Ayuda:}\;$2^{22} \equiv 4 \; (100)$).  
+	\vskip .2cm
+		\item[2.]  (40 pts)  Probar usando el teorema de Fermat  que el resto de dividir $7^{98}$ por $13$ es $10$. . 
 	\end{enumerate}
 \end{ejercicio}
 	
-\begin{comment}^{5}
+%\begin{comment}^{5}
 \begin{solucion}
 
 1(i). (40 pts) 
@@ -204,11 +204,11 @@ Luego, las soluciones $x$ tal que $0 < x < 150$ son $x= 48$ y $x=107$.
 	\begin{equation*}
 		7^{98} \equiv 7^{12 \cdot 8 + 2}  \equiv 7^{12 \cdot 8}\, 7^{2} \equiv (7^{12})^8\, 7^{2}\equiv 1^8\, 7^{2}\equiv 49 \equiv 3\cdot 13 +10  \equiv 10  \, (13).
 	\end{equation*}
-	
+	 
 	
 \end{solucion}
 
-\end{comment}
+%\end{comment}
 \end{document}
 
 
