--- a/2020-1/tareas/tarea_02_soluciones.tex
+++ b/2020-1/tareas/tarea_02_soluciones.tex
@@ -1,5 +1,5 @@
 % PDFLaTeX
-\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
+\documentclass[a4paper,12pt,twoside,spanish]{amsbook}
 %\documentclass[a4paper,11pt,twoside]{book}
 %\documentclass[a4paper,11pt,twoside,spanish]{amsbook}
 
@@ -79,38 +79,37 @@
 \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 
 \newtheorem{teorema}{Teorema}[section]
-\newtheorem{proposicion}[teorema]{Proposición}
+\newtheorem{proposicion}[teorema]{Proposici\'on}
 \newtheorem{corolario}[teorema]{Corolario}
 \newtheorem{lema}[teorema]{Lema}
 \newtheorem{propiedad}[teorema]{Propiedad}
 
 \theoremstyle{definition}
 
-\newtheorem{definicion}{Definición}[section]
+\newtheorem{definicion}{Definici\'on}[section]
 \newtheorem{ejemplo}{Ejemplo}[section]
 \newtheorem{problema}{Problema}[section]
 \newtheorem{ejercicio}{Ejercicio}[section]
 \newtheorem{ejerciciof}{}[section]
 
 \theoremstyle{remark}
-\newtheorem{observacion}{Observación}[section]
+\newtheorem{observacion}{Observaci\'on}[section]
 \newtheorem{nota}{Nota}[section]
 
 \renewcommand{\partname }{Parte }
 \renewcommand{\indexname}{Indice }
 \renewcommand{\figurename }{Figura }
 \renewcommand{\tablename }{Tabla }
-\renewcommand{\proofname}{Demostración}
+\renewcommand{\proofname}{Demostraci\'on}
 \renewcommand{\appendixname }{}
 \renewcommand{\contentsname }{Contenidos }
 \renewcommand{\chaptername }{}
 \renewcommand{\bibname }{Bibliograf\'\i a }
 
 
-
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -134,82 +133,80 @@
 	\vskip .2cm}% end code
 
 
+
+
+
+
 \begin{document}
 
 %\frame{\titlepage} 
 
 
-\tarea{9}
+\tarea{2}
 
 \begin{ejercicio}
+	Sea $u_n$ definida recursivamente por:
+	\begin{equation*}
+	u_0 = 1, \; u_1 = 0, \;\qquad u_n = 5u_{n-1} - 6 u_{n-2}, \; \forall n \ge 2. 
+	\end{equation*}
 	\begin{enumerate}
-		\item[1.] (60 pts) 
-		\begin{enumerate}
-			\item[(i)] Encontrar todas las soluciones de la ecuación en congruencia
-			$$30\,x\equiv 2 \quad (67)$$
-			usando el método visto en clase.
-			\item[(ii)] Dar todas las soluciones $x$ de la ecuación anterior tales que $0 < x < 300$.
-		\end{enumerate}
-		\vskip .2cm
-		\item[2.]  (40 pts)  Encontrar los últimos dos dígitos de $2^{338}$. (\textit{Ayuda:}\;$2^{22} \equiv 4 \; (100)$).  
+		\item[1.]  Calcule $u_2$ y $u_3$ usando  recursión. (30 pts)
+		\item[2.] Pruebe por inducción que $u_n = 3\cdot 2^n - 2 \cdot 3^n$. (70 pts)
 	\end{enumerate}
+	\vskip .2cm
 \end{ejercicio}
-	
-\begin{comment}^{5}
-\begin{solucion}
 
-1(i). (40 pts) 
-Primero encontramos el mcd entre $59$ y $10$:
-\begin{alignat}3
-59 &= 10 \cdot 5 + 9& \qquad&\Rightarrow& \qquad 9 &= 59 -  10 \cdot 5 \label{eq:cle1}\\ 
-10 &=  9\cdot 1 +1 & \qquad&\Rightarrow& \qquad 1 &= 10 - 9 \label{eq:cle2}\qquad\\
-9 &=  1\cdot 9  +0 & \qquad&& \qquad  &
-\end{alignat}
-Luego, $1=(59,10)$ y 
-\begin{align*}
-1 & \overset{(\ref{eq:cle2})}{=} 10 -9  \\
-& \overset{(\ref{eq:cle1})}{=}  10 -(59 -  10 \cdot 5) = 10 -59 + 5\cdot  10 \\
-&=  6 \cdot  10 + (-1) \cdot 59.
-\end{align*}
-
-Por lo tanto
-\begin{equation*}
-	10 \cdot 6 \equiv 1 (59). 
-\end{equation*}
-Multiplicando  por $8$,  tenemos
-\begin{equation*}
-10 \cdot 48 \equiv 8 (59). 
-\end{equation*}
-Por lo tanto $x_0=48$ es solución y todas las soluciones son de la forma $48+ k\cdot 59$, con $k \in \mathbb Z$.
-\vskip .4cm
-
-
-
-1(ii). (20 pts) Por (i), las soluciones son de la forma  $48+ k\cdot 59$, con $k \in \mathbb Z$, por lo tanto son soluciones
-\begin{equation*}
-	48 +(-2)\cdot 59 = -70,\quad 48 +(-1)\cdot 59 = -11,\quad  48 +0 \cdot 59= 48, \quad   48 +1 \cdot 59 =107, \quad   48 +2 \cdot 59 =166.,
-\end{equation*}
-Luego, las soluciones $x$ tal que $0 < x < 150$ son $x= 48$ y $x=107$. 
-\vskip .4cm
-\newpage
-	2. Por una de la versiones del teorema de Fermat, si  $p$ ves primo  y $p\not= a$, tenemos que
+	\begin{solucion}
+	{\noindent 1.} Por definición $u_0 = 1, \; u_1 = 0$, luego:
 	\begin{equation*}
-		a^{p-1} \equiv 1 \,(p).
+	u_2 = 5u_{2-1} - 6 u_{2-2} = 5u_{1} - 6 u_{0} = 5 \cdot 0 - 6 \cdot 1 = -6 
 	\end{equation*}
-	Como $13$ es primo y $1=(7,13)$,  tenemos que:
+	Ahora  $u_1 = 0, \; u_2 = -6$, luego:
 	\begin{equation*}
-	7^{12} \equiv 1 \,(13).
-	\end{equation*}
-	Como $98 = 12 \cdot 8 + 2$, 
-	\begin{equation*}
-		7^{98} \equiv 7^{12 \cdot 8 + 2}  \equiv 7^{12 \cdot 8}\, 7^{2} \equiv (7^{12})^8\, 7^{2}\equiv 1^8\, 7^{2}\equiv 49 \equiv 3\cdot 13 +10  \equiv 10  \, (13).
+	u_3 = 5u_{3-1} - 6 u_{3-2} = 5u_{2} - 6 u_{1} = 5 \cdot (-6) - 6 \cdot 0 = -30. 
 	\end{equation*}
 	
+	\vskip .2cm
 	
-\end{solucion}
+	
+	{\noindent 2.} \textbf{Caso base.} 
+	Por un lado $u_0 =1$, por definición, por otro lado  si calculamos con la fórmula: $u_0 = 3 \cdot 2^0 - 2 \cdot 3^0 = 3- 2 = 1$ y listo.
+	\vskip .2cm
+	Por un lado $u_1 =0$, por definición, por otro lado  si calculamos con la fórmula: $u_1 = 3 \cdot 2^1 - 2 \cdot 3^1 = 3 \cdot 2- 2 \cdot 3 =  6-6 = 0$ y listo.
+	
+	\vskip .8cm
+	
+	\textbf{Paso inductivo.} Debemos probar que si  vale
+	\begin{equation*}
+	u_h = 3\cdot 2^h - 2 \cdot 3^h \text{ \;para\; }  0 \le h \le k \text{\; con\; }  k \ge 0, \tag{HI}
+	\end{equation*}
+	eso implica que
+	\begin{equation*}
+	u_{k+1} = 3\cdot 2^{k+1} - 2 \cdot 3^{k+1}. \tag{*}
+	\end{equation*}
+	
+	Comenzamos por el lado izquierdo de (*):
+	
+	
+	\begin{align*}
+	u_{k+1} &=   5u_{k+1-1} - 6 u_{k+1-2}&&\text{ \;(por definición de $u_n$)\; } \\
+	&=   5u_{k} - 6 u_{k-1}&&\\
+	&=   5( 3\cdot 2^{k} - 2 \cdot 3^{k}) - 6 ( 3\cdot 2^{k-1} - 2 \cdot 3^{k-1})&&\text{ \;(por HI)\; } \\
+	&=   5\cdot  3\cdot 2^{k} - 5 \cdot 2 \cdot 3^{k} - 6 \cdot  3\cdot 2^{k-1} + 6 \cdot  2 \cdot 3^{k-1}&& \\
+	&=   5\cdot  3\cdot 2\cdot 2^{k-1} - 5 \cdot 2 \cdot 3 \cdot  3^{k-1} - 6 \cdot  3\cdot 2^{k-1} + 6 \cdot  2 \cdot 3^{k-1}&& \\
+	&=   30\cdot 2^{k-1} -30 \cdot  3^{k-1} - 18\cdot 2^{k-1} + 12 \cdot 3^{k-1}&&\\
+	&=   (30-18)\cdot 2^{k-1} +(-30+12) \cdot  3^{k-1}&& \text{ \;(factor común $ 2^{k-1}$ y $ 3^{k-1}$ )\; } \\
+	&=   12\cdot 2^{k-1} -18 \cdot  3^{k-1}&&\\
+	&=   3 \cdot 2^2 \cdot 2^{k-1} - 2 \cdot 3^2 \cdot  3^{k-1}&&\\
+	&=   3 \cdot 2^{2+k-1} - 2  \cdot  3^{2+k-1}&&\\
+	&=   3 \cdot 2^{k+1} - 2  \cdot  3^{k+1}&&.
+	\end{align*}
+	
+	Esto  prueba (*).
+	\end{solucion}
 
-\end{comment}
+
+
+
 \end{document}
 
-
-	2. 
