--- a/2020-1/tareas/tarea_03_soluciones.tex
+++ b/2020-1/tareas/tarea_03_soluciones.tex
@@ -1,5 +1,5 @@
 % PDFLaTeX
-\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
+\documentclass[a4paper,12pt,twoside,spanish]{amsbook}
 %\documentclass[a4paper,11pt,twoside]{book}
 %\documentclass[a4paper,11pt,twoside,spanish]{amsbook}
 
@@ -79,28 +79,28 @@
 \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 
 \newtheorem{teorema}{Teorema}[section]
-\newtheorem{proposicion}[teorema]{Proposición}
+\newtheorem{proposicion}[teorema]{Proposici\'on}
 \newtheorem{corolario}[teorema]{Corolario}
 \newtheorem{lema}[teorema]{Lema}
 \newtheorem{propiedad}[teorema]{Propiedad}
 
 \theoremstyle{definition}
 
-\newtheorem{definicion}{Definición}[section]
+\newtheorem{definicion}{Definici\'on}[section]
 \newtheorem{ejemplo}{Ejemplo}[section]
 \newtheorem{problema}{Problema}[section]
 \newtheorem{ejercicio}{Ejercicio}[section]
 \newtheorem{ejerciciof}{}[section]
 
 \theoremstyle{remark}
-\newtheorem{observacion}{Observación}[section]
+\newtheorem{observacion}{Observaci\'on}[section]
 \newtheorem{nota}{Nota}[section]
 
 \renewcommand{\partname }{Parte }
 \renewcommand{\indexname}{Indice }
 \renewcommand{\figurename }{Figura }
 \renewcommand{\tablename }{Tabla }
-\renewcommand{\proofname}{Demostración}
+\renewcommand{\proofname}{Demostraci\'on}
 \renewcommand{\appendixname }{}
 \renewcommand{\contentsname }{Contenidos }
 \renewcommand{\chaptername }{}
@@ -110,7 +110,7 @@
 
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -139,77 +139,40 @@
 %\frame{\titlepage} 
 
 
-\tarea{9}
+\tarea{3}
 
 \begin{ejercicio}
+	En este ejercicio decimos que una \textit{palabra} es una sucesión de letras (tenga sentido o no).
 	\begin{enumerate}
-		\item[1.] (60 pts) 
-		\begin{enumerate}
-			\item[(i)] Encontrar todas las soluciones de la ecuación en congruencia
-			$$30\,x\equiv 2 \quad (67)$$
-			usando el método visto en clase.
-			\item[(ii)] Dar todas las soluciones $x$ de la ecuación anterior tales que $0 < x < 300$.
-		\end{enumerate}
-		\vskip .2cm
-		\item[2.]  (40 pts)  Encontrar los últimos dos dígitos de $2^{338}$. (\textit{Ayuda:}\;$2^{22} \equiv 4 \; (100)$).  
+		\item[1.]  (50 pts) ¿Cuántas palabras de 4 letras o  menos se pueden hacer con un alfabeto de 26 letras?
+		\item[2.] (50 pts) ¿De cuántas formas pueden ordenarse las letras de la palabra\newline PREPOTENTE?
 	\end{enumerate}
 \end{ejercicio}
 	
-\begin{comment}^{5}
+%\begin{comment}
 \begin{solucion}
-
-1(i). (40 pts) 
-Primero encontramos el mcd entre $59$ y $10$:
-\begin{alignat}3
-59 &= 10 \cdot 5 + 9& \qquad&\Rightarrow& \qquad 9 &= 59 -  10 \cdot 5 \label{eq:cle1}\\ 
-10 &=  9\cdot 1 +1 & \qquad&\Rightarrow& \qquad 1 &= 10 - 9 \label{eq:cle2}\qquad\\
-9 &=  1\cdot 9  +0 & \qquad&& \qquad  &
-\end{alignat}
-Luego, $1=(59,10)$ y 
-\begin{align*}
-1 & \overset{(\ref{eq:cle2})}{=} 10 -9  \\
-& \overset{(\ref{eq:cle1})}{=}  10 -(59 -  10 \cdot 5) = 10 -59 + 5\cdot  10 \\
-&=  6 \cdot  10 + (-1) \cdot 59.
-\end{align*}
-
-Por lo tanto
-\begin{equation*}
-	10 \cdot 6 \equiv 1 (59). 
-\end{equation*}
-Multiplicando  por $8$,  tenemos
-\begin{equation*}
-10 \cdot 48 \equiv 8 (59). 
-\end{equation*}
-Por lo tanto $x_0=48$ es solución y todas las soluciones son de la forma $48+ k\cdot 59$, con $k \in \mathbb Z$.
-\vskip .4cm
-
-
-
-1(ii). (20 pts) Por (i), las soluciones son de la forma  $48+ k\cdot 59$, con $k \in \mathbb Z$, por lo tanto son soluciones
-\begin{equation*}
-	48 +(-2)\cdot 59 = -70,\quad 48 +(-1)\cdot 59 = -11,\quad  48 +0 \cdot 59= 48, \quad   48 +1 \cdot 59 =107, \quad   48 +2 \cdot 59 =166.,
-\end{equation*}
-Luego, las soluciones $x$ tal que $0 < x < 150$ son $x= 48$ y $x=107$. 
-\vskip .4cm
-\newpage
-	2. Por una de la versiones del teorema de Fermat, si  $p$ ves primo  y $p\not= a$, tenemos que
-	\begin{equation*}
-		a^{p-1} \equiv 1 \,(p).
-	\end{equation*}
-	Como $13$ es primo y $1=(7,13)$,  tenemos que:
-	\begin{equation*}
-	7^{12} \equiv 1 \,(13).
-	\end{equation*}
-	Como $98 = 12 \cdot 8 + 2$, 
-	\begin{equation*}
-		7^{98} \equiv 7^{12 \cdot 8 + 2}  \equiv 7^{12 \cdot 8}\, 7^{2} \equiv (7^{12})^8\, 7^{2}\equiv 1^8\, 7^{2}\equiv 49 \equiv 3\cdot 13 +10  \equiv 10  \, (13).
-	\end{equation*}
+	\noindent 1. La pregunta del ejercicio es equivalente a ¿cuántas palabras de 1, 2,3 o 4 letras se pueden hacer con un alfabeto de 26 letras? Es decir podemos separar en 4 casos (disjuntos) palabras de 1 letra, de 2 letras,  de 3 letras  o de 4 letras. Cada caso  es una selección ordenada con repetición. 
 	
+	\textbf{1 letra.} 26 palabras.
 	
+	\textbf{2 letras.} $26 \times 26 = 26^2$ palabras.
+	
+	\textbf{3 letras.} $26 \times 26 \times  26 = 26^3$ palabras.
+
+	\textbf{4 letras.}  $26 \times 26 \times  26 \times  26 = 26^4$ palabras.
+	
+	Luego  la respuesta es $26 + 26^2 + 26^3 + 26^4$ palabras.
+	
+	\vskip .4cm
+	
+	\noindent 2. La palabra PREPOTENTE es una palabra de longitud 10, donde la E se repite 3 veces, la P y la T se repiten 2 veces y luego están  la R, la O y  la N  una sola vez cada una. 
+	
+	Luego, la solución es 
+	$$
+	\frac{10!}{3!2!2!}.
+	$$
 \end{solucion}
 
-\end{comment}
+%\end{comment}
 \end{document}
 
-
-	2. 
