--- a/2020-1/tareas/tarea_06.tex
+++ b/2020-1/tareas/tarea_06.tex
@@ -1,5 +1,5 @@
 % PDFLaTeX
-\documentclass[a4paper,12pt,twoside,spanish,reqno]{amsbook}
+\documentclass[a4paper,12pt,twoside,spanish]{amsbook}
 %\documentclass[a4paper,11pt,twoside]{book}
 %\documentclass[a4paper,11pt,twoside,spanish]{amsbook}
 
@@ -79,28 +79,28 @@
 \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 
 \newtheorem{teorema}{Teorema}[section]
-\newtheorem{proposicion}[teorema]{Proposición}
+\newtheorem{proposicion}[teorema]{Proposici\'on}
 \newtheorem{corolario}[teorema]{Corolario}
 \newtheorem{lema}[teorema]{Lema}
 \newtheorem{propiedad}[teorema]{Propiedad}
 
 \theoremstyle{definition}
 
-\newtheorem{definicion}{Definición}[section]
+\newtheorem{definicion}{Definici\'on}[section]
 \newtheorem{ejemplo}{Ejemplo}[section]
 \newtheorem{problema}{Problema}[section]
 \newtheorem{ejercicio}{Ejercicio}[section]
 \newtheorem{ejerciciof}{}[section]
 
 \theoremstyle{remark}
-\newtheorem{observacion}{Observación}[section]
+\newtheorem{observacion}{Observaci\'on}[section]
 \newtheorem{nota}{Nota}[section]
 
 \renewcommand{\partname }{Parte }
 \renewcommand{\indexname}{Indice }
 \renewcommand{\figurename }{Figura }
 \renewcommand{\tablename }{Tabla }
-\renewcommand{\proofname}{Demostración}
+\renewcommand{\proofname}{Demostraci\'on}
 \renewcommand{\appendixname }{}
 \renewcommand{\contentsname }{Contenidos }
 \renewcommand{\chaptername }{}
@@ -110,7 +110,7 @@
 
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -139,77 +139,88 @@
 %\frame{\titlepage} 
 
 
-\tarea{9}
+\tarea{6}
 
 \begin{ejercicio}
 	\begin{enumerate}
-		\item[1.] (60 pts) 
+		\item[1.](30 pts) Probar usando  la definición de ''divide a'' que si $n | m$,  entonces $n | m^3$.
+		%\item[2.] (30 pts) Probar que para $n \ge 0$ se satisface $3 | 2^{3n+2} + 5^{n+3}$.  
+		\item[2.] 
 		\begin{enumerate}
-			\item[(i)] Encontrar todas las soluciones de la ecuación en congruencia
-			$$30\,x\equiv 2 \quad (67)$$
-			usando el método visto en clase.
-			\item[(ii)] Dar todas las soluciones $x$ de la ecuación anterior tales que $0 < x < 300$.
-		\end{enumerate}
-		\vskip .2cm
-		\item[2.]  (40 pts)  Encontrar los últimos dos dígitos de $2^{338}$. (\textit{Ayuda:}\;$2^{22} \equiv 4 \; (100)$).  
+			\item[a)] (40 pts) Encontrar usando el algoritmo de Euclides $d = \operatorname{mcd}( 162, 138)$. 
+			\item[b)] (30 pts) Expresar $d$  como combinación lineal entera entre  $162$ y $138$.
+		\end{enumerate}	 
 	\end{enumerate}
 \end{ejercicio}
 	
-\begin{comment}^{5}
+\begin{comment}
 \begin{solucion}
-
-1(i). (40 pts) 
-Primero encontramos el mcd entre $59$ y $10$:
-\begin{alignat}3
-59 &= 10 \cdot 5 + 9& \qquad&\Rightarrow& \qquad 9 &= 59 -  10 \cdot 5 \label{eq:cle1}\\ 
-10 &=  9\cdot 1 +1 & \qquad&\Rightarrow& \qquad 1 &= 10 - 9 \label{eq:cle2}\qquad\\
-9 &=  1\cdot 9  +0 & \qquad&& \qquad  &
-\end{alignat}
-Luego, $1=(59,10)$ y 
-\begin{align*}
-1 & \overset{(\ref{eq:cle2})}{=} 10 -9  \\
-& \overset{(\ref{eq:cle1})}{=}  10 -(59 -  10 \cdot 5) = 10 -59 + 5\cdot  10 \\
-&=  6 \cdot  10 + (-1) \cdot 59.
-\end{align*}
-
-Por lo tanto
-\begin{equation*}
-	10 \cdot 6 \equiv 1 (59). 
-\end{equation*}
-Multiplicando  por $8$,  tenemos
-\begin{equation*}
-10 \cdot 48 \equiv 8 (59). 
-\end{equation*}
-Por lo tanto $x_0=48$ es solución y todas las soluciones son de la forma $48+ k\cdot 59$, con $k \in \mathbb Z$.
+	1. Como  $n | m$,  entonces existe $q$, número entero, tal que $m = n \cdot q$.
+	
+	Ahora bien, 
+	$$
+	m^3 = (n \cdot q)^3 = n^3 \cdot q^3 = n ( n^2 q^3).
+	$$
+	Por  lo tanto, $n|m^3$.
+	
 \vskip .4cm
 
-
-
-1(ii). (20 pts) Por (i), las soluciones son de la forma  $48+ k\cdot 59$, con $k \in \mathbb Z$, por lo tanto son soluciones
-\begin{equation*}
-	48 +(-2)\cdot 59 = -70,\quad 48 +(-1)\cdot 59 = -11,\quad  48 +0 \cdot 59= 48, \quad   48 +1 \cdot 59 =107, \quad   48 +2 \cdot 59 =166.,
-\end{equation*}
-Luego, las soluciones $x$ tal que $0 < x < 150$ son $x= 48$ y $x=107$. 
-\vskip .4cm
-\newpage
-	2. Por una de la versiones del teorema de Fermat, si  $p$ ves primo  y $p\not= a$, tenemos que
-	\begin{equation*}
-		a^{p-1} \equiv 1 \,(p).
-	\end{equation*}
-	Como $13$ es primo y $1=(7,13)$,  tenemos que:
-	\begin{equation*}
-	7^{12} \equiv 1 \,(13).
-	\end{equation*}
-	Como $98 = 12 \cdot 8 + 2$, 
-	\begin{equation*}
-		7^{98} \equiv 7^{12 \cdot 8 + 2}  \equiv 7^{12 \cdot 8}\, 7^{2} \equiv (7^{12})^8\, 7^{2}\equiv 1^8\, 7^{2}\equiv 49 \equiv 3\cdot 13 +10  \equiv 10  \, (13).
-	\end{equation*}
+	2 (a).  Primero hallamos el mcd entre  162 y 138.
+	\begin{align}	
+		162 &= 138  \cdot 1 + 24\\		
+		138 &= 24  \cdot 5+ 18\\		
+		24 &= 18  \cdot 1+ 6\\		
+		18 &= 6  \cdot 3 + 0 
+	\end{align}
+	Como el último resto no nulo es  6, tenemos que \colorbox{lightgray}{$\operatorname{mcd}(162, 138) =6$}.
 	
+		\vskip .4cm
+	2 (b). Ahora escribamos 6 como combinación lineal entera de   162 y 138.
+		\begin{alignat*}2
+		6 &= 24 -18& \qquad\qquad&(\text{por (3)}) \\
+		&=  24 -(138 -24  \cdot 5 ) & \qquad\qquad&(\text{por (2)}) \\
+		&=  24 +(-1) \cdot 138 +5 \cdot 24& & \\
+		&= (-1) \cdot 138 +6 \cdot 24& & \\
+		&= (-1) \cdot 138 +6 \cdot (162-138)& \qquad\qquad&(\text{por (1)}) \\
+		&= (-1) \cdot 138 +6 \cdot 162 + (-6)\cdot 138& & \\
+		&= (-7) \cdot 138 +6 \cdot 162& \qquad\qquad&
+	\end{alignat*}
 	
+	Es decir \colorbox{lightgray}{$6 = 6 \cdot 162+ (-7) \cdot 138$}.
 \end{solucion}
 
 \end{comment}
 \end{document}
 
 
-	2. 
+
+
+	2. Lo haremos por inducción.
+\vskip .3cm 
+Caso base $n=0$. 
+
+En  este caso  $2^{3n+2} + 5^{n+3} =  2^{2} + 5^{3} = 4 +125  = 129 = 3 \cdot 43$,  es decir $3| 2^{2} + 5^{3}$.
+
+\vskip .3cm 
+
+Paso  inductivo. Supongamos que $3 | 2^{3k+2} + 5^{k+3}$ para un $k \ge 0$ (HI),  debemos probar que 
+\begin{equation}\label{eq-q}
+3 | 2^{3(k+1)+2} + 5^{(k+1)+3}. \tag{*}
+\end{equation}
+Ahora bien, 
+\begin{align*}
+2^{3(k+1)+2} + 5^{(k+1)+3} &= 2^{3k+3+2} + 5^{k+1+3}\\
+&= 2^{3k+2}\cdot 2^{3} + 5^{k+3}\cdot 5^{1} \\
+&= 8 \cdot 2^{3k+2} + 5\cdot 5^{k+3}\\
+&= 5( 2^{3k+2} + 5^{k+3})  +3 \cdot 2^{3k+2}.
+\end{align*}
+Es decir
+\begin{equation}
+2^{3(k+1)+2} + 5^{(k+1)+3} = 5( 2^{3k+2} + 5^{k+3})  +3 \cdot 2^{3k+2}. \tag{**}
+\end{equation}
+Por hipótesis inductiva (HI), $3 | 2^{3k+2} + 5^{k+3}$ y por lo tanto $ 3|5( 2^{3k+2} + 5^{k+3})$. Por otro lado es claro  que $3 | 3 \cdot 2^{3k+2}$. Entonces,  3 divide a la suma de  $5( 2^{3k+2} + 5^{k+3})$ y $3 \cdot 2^{3k+2}$:
+\begin{equation*}
+3|5( 2^{3k+2} + 5^{k+3}) + 3 \cdot 2^{3k+2} \overset{(**)}{=}2^{3(k+1)+2} + 5^{(k+1)+3},
+\end{equation*}
+y esto  prueba (*), y por lo tanto prueba el ejercicio.
+\vskip .4cm 
