tareas_definiciones.tex y modificaciones corresp.

--- a/2021-1/tareas/tarea_06.tex
+++ b/2021-1/tareas/tarea_06.tex
@@ -1,143 +1,10 @@
 % PDFLaTeX
 \documentclass[a4paper,12pt,twoside,spanish]{amsbook}
-%\documentclass[a4paper,11pt,twoside]{book}
-%\documentclass[a4paper,11pt,twoside,spanish]{amsbook}
 
-%%%---------------------------------------------------
-
-
-\usepackage{etex}
-\tolerance=10000
-\renewcommand{\baselinestretch}{1.3}
-
-\renewcommand{\familydefault}{\sfdefault} % la font por default es sans serif
-
-% Para hacer el  indice en linea de comando hacer 
-% makeindex main
-%% En http://www.tug.org/pracjourn/2006-1/hartke/hartke.pdf hay ejemplos de packages de fonts libres, como los siguientes:
-%\usepackage{cmbright}
-%\usepackage{pxfonts}
-%\usepackage[varg]{txfonts}
-%\usepackage{ccfonts}
-%\usepackage[math]{iwona}
-%\usepackage[math]{kurier}
-
-
-\usepackage{t1enc}
-%\usepackage[spanish]{babel}
-\usepackage{latexsym}
-\usepackage[utf8]{inputenc}
-\usepackage{verbatim}
-\usepackage{multicol}
-\usepackage{amsgen,amsmath,amstext,amsbsy,amsopn,amsfonts,amssymb}
-\usepackage{amsthm}
-\usepackage{calc}         % From LaTeX distribution
-\usepackage{graphicx}     % From LaTeX distribution
-\usepackage{ifthen}
-\input{random.tex}        % From CTAN/macros/generic
-\usepackage{subfigure} 
-\usepackage{tikz}
-\usetikzlibrary{arrows}
-\usetikzlibrary{matrix}
-%\usetikzlibrary{graphs}
-%\usepackage{tikz-3dplot} %for tikz-3dplot functionality
-%\usepackage{pgfplots}
-\usepackage{mathtools}
-\usepackage{stackrel}
-\usepackage{enumerate}
-\usepackage{tkz-graph}
-%\usepackage{makeidx}
-\makeindex
-
-%%%----------------------------------------------------------------------------
-\usepackage[a4paper, top=3cm, left=3cm, right=2cm, bottom=2.5cm]{geometry}
-%% CONTROLADORES DE.
-% Tamaño de la hoja de impresión.
-% Tamaños de los laterales del documento. 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% \theoremstyle{plain} %% This is the default
-%\oddsidemargin 0.0in \evensidemargin -1.0cm \topmargin 0in
-%\headheight .3in \headsep .2in \footskip .2in
-%\setlength{\textwidth}{16cm} %ancho para apunte
-%\setlength{\textheight}{21cm} %largo para apunte
-%%%%\leftmargin 2.5cm
-%%%%\rightmargin 2.5cm
-%\topmargin 0.5 cm
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\usepackage{hyperref}
-\hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=magenta,      
-	urlcolor=cyan,
-}
-\usepackage{hypcap}
-
-
-\renewcommand{\thesection}{\thechapter.\arabic{section}}
-\renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
-
-\newtheorem{teorema}{Teorema}[section]
-\newtheorem{proposicion}[teorema]{Proposici\'on}
-\newtheorem{corolario}[teorema]{Corolario}
-\newtheorem{lema}[teorema]{Lema}
-\newtheorem{propiedad}[teorema]{Propiedad}
-
-\theoremstyle{definition}
-
-\newtheorem{definicion}{Definici\'on}[section]
-\newtheorem{ejemplo}{Ejemplo}[section]
-\newtheorem{problema}{Problema}[section]
-\newtheorem{ejercicio}{Ejercicio}[section]
-\newtheorem{ejerciciof}{}[section]
-
-\theoremstyle{remark}
-\newtheorem{observacion}{Observaci\'on}[section]
-\newtheorem{nota}{Nota}[section]
-
-\renewcommand{\partname }{Parte }
-\renewcommand{\indexname}{Indice }
-\renewcommand{\figurename }{Figura }
-\renewcommand{\tablename }{Tabla }
-\renewcommand{\proofname}{Demostraci\'on}
-\renewcommand{\appendixname }{}
-\renewcommand{\contentsname }{Contenidos }
-\renewcommand{\chaptername }{}
-\renewcommand{\bibname }{Bibliograf\'\i a }
-
-
-
-\newcommand{\tarea}[1]{
-	\begin{center}
-		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
-		{\Large Tarea #1}\vskip .4cm
-\end{center}}
-
-\renewenvironment{ejercicio}% environment name
-{% begin code
-	\par\vskip .5cm%
-	{\noindent\color{blue}Ejercicio}%
-	\vskip .2cm
-}%
-{%
-	\vskip .2cm}% end code
-
-
-\newenvironment{solucion}% environment name
-{% begin code
-	\par\vskip .2cm%
-	{\noindent\color{blue}Solución}%
-	\vskip .2cm
-}%
-{%
-	\vskip .2cm}% end code
+\input{tareas_definiciones} 
 
 
 \begin{document}
-
-%\frame{\titlepage} 
-
 
 \tarea{6}
 
